--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ file(GLOB lib_srcs ${boost_root}/libs/system/src/*.cpp)
 
 add_library( boost_system ${lib_srcs})
 
-file(GLOB lib_srcs ${boost_root}/libs/filesystem/v2/src/*.cpp)
+file(GLOB lib_srcs ${boost_root}/libs/filesystem/src/*.cpp)
 
 add_library( boost_filesystem ${lib_srcs})
 
@@ -33,6 +33,7 @@ set(lib_dir ${boost_root}/libs/iostreams/src)
 set(lib_srcs ${lib_dir}/file_descriptor.cpp   ${lib_dir}/gzip.cpp   ${lib_dir}/mapped_file.cpp   ${lib_dir}/zlib.cpp)
 
 
+add_library( boost_iostreams ${lib_srcs})
 add_library( boost_iostreams ${lib_srcs})
 
 file(GLOB lib_srcs ${boost_root}/libs/program_options/src/*.cpp)
